# ZhaoZeru

./: README.md  README.txt
2024寒假任务  autolabor ROS学习/: ROS课程大纲.md  U1_.md  U2_.md  U3_ROS通信机制进阶.md  U4_ROS运行管理  U4_ROS运行管理.md  U5_ROS常用组件.md  U6_机器人系统仿真.md  U7_机器人导航（仿真）.md
devel/: .catkin  .rosinstall
devel/include/communication/: Person.h
devel/lib/communication/: listener  person_listener  person_talker  talker
devel/lib/dynamic_tf/: dynamic_tf_pub  dynamic_tf_sub
devel/lib/multi_tf/: multi_sub
devel/lib/pkgconfig/: communication.pc  dynamic_tf.pc  hello_vscode.pc  multi_tf.pc  packages.pc  pub_turtlesim.pc  robo.pc  ros_param.pc  tf_try.pc  tf_turtle.pc
devel/lib/pub_turtlesim/: call_server  pub_turtlesim  set_bkcolor  sub_turtlesim
devel/lib/ros_param/: Param_Listener  Param_Talker  (+1 more)
src/communication/: package.xml
src/dynamic_tf/: CMakeLists.txt
src/hello_vscode/: package.xml
src/multi_tf/: CMakeLists.txt  package.xml
src/pub_turtlesim/: CMakeLists.txt
src/robo/: CMakeLists.txt  package.xml
src/ros_param/: CMakeLists.txt
src/tf_try/: CMakeLists.txt
src/tf_turtle/: CMakeLists.txt  package.xml
task_no1/: 2023超级对抗赛 赛点总结分析.md  算法slam第一次作业.md
task_no1/segment/: CMakeLists.txt
task_no1/segment/include/: segment.h
task_no1/segment/src/: main.cpp  segment.cpp
task_no1/src/: CMakeLists.txt  helloworld.cpp
week2/: 第二次培训说明+任务.md
week2/at_try/: CMakeLists.txt
week2/学习文档/: 学习文档.md
week3/24第三次培训作业/: 去畸变程序示例.txt  狼牙24赛季第三次算法组培训作业.md  畸变参数.txt.txt
week3/24第三次培训作业/viz/: CMakeLists.txt
week3/24第三次培训作业/viz/src/: vtkDisplay.cpp
(+64 files in other folders)
